# PyPen

./: .gitignore  AGENT_SKILL.md  README.md
pypen_mcp/: __init__.py  browser.py  captcha.py  debug.py  dom.py  javascript.py  network.py  pyproject.toml  server.py  session.py
tests/: test_session_persistence.py
