[project]
name = "pypen-mcp"
version = "0.1.0"
description = "MCP server for browser-based pentesting using PyDoll"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydoll-python>=2.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
pypen-mcp = "pypen_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pypen_mcp"]
